[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/inventory/InventoryUI.gd" type="Script" id=1]
[ext_resource path="res://components/inventory/inventory-panel.png" type="Texture" id=2]
[ext_resource path="res://components/items/weapons/swords/swords.png" type="Texture" id=3]

[node name="InventoryUI" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 118.0
margin_bottom = 24.0

[node name="Background" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Background/CenterContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="Artifacts" type="NinePatchRect" parent="MarginContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 114.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 86, 12 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Artifacts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer"]
margin_right = 86.0
margin_bottom = 24.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 24.0

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 24.0

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer/CenterContainer2"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 24.0

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer/CenterContainer3"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 24.0

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Artifacts/MarginContainer/HBoxContainer/CenterContainer4"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
expand = true

[node name="Currency" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 118.0
margin_bottom = 24.0
